# DuinoStation

./: README.md
git/emokit_test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
git/emokit_test/examples/contact/: Makefile  cmake_install.cmake
git/emokit_test/examples/dsp/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  dsp.c
git/emokit_test/examples/emokit_osc/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
git/emokit_test/examples/emokitd/: Makefile  cmake_install.cmake
git/emokit_test/include/emokit/: emokit_dsp.h  emokit_dsp.h~
git/emokit_test/include/oscpack/: Makefile  cmake_install.cmake
git/emokit_test/src/: CMakeLists.txt~  Makefile  cmake_install.cmake  emokit_dsp.c  emokit_dsp.c~
libraries/Adafruit_PCD8544/: Adafruit_PCD8544.cpp
src/: weather_Station.ino
